<resources>
    <string name="app_name">Boat Booking</string>
    <string name="forgotPwd"><a href="https://learntodroid.com">Password dimenticata?</a></string>
    <string name="activity_link"><u>Password dimenticata?</u></string>
    <string name="name">Nome</string>

    <string name="indirizzo_e_mail">Indirizzo E-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="password_reset">Reset Password</string>
    <string name="reset_pwd">Invia link per il reset</string>

    <string name="login">Login</string>
    <string name="altrimenti">ALTRIMENTI</string>
    <string name="registration">Registrati</string>
    <string name="register_with">Registrati con</string>

    <string name="crea_account">Crea un account</string>
    <string name="sing_in_with">Accedi con</string>
    <string name="accedi">Accedi</string>
    <string name="google_login">google login</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_button_text">Login</string>
    <string name="otherwise_use">Oppure registrati con</string>
    <string name="backBtn">Indietro</string>
    <string name="remember_me">Ricordami</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="cerca">Cerca</string>
    <string name="preferiti">Preferiti</string>
    <string name="messaggi">Messaggi</string>
    <string name="type_a_message">Inserisci un messaggio</string>
    <string name="logout">Esci</string>
    <string name="searchQueryHint">Inserisci una città</string>
    <string name="profilo">Profilo</string>
    <string name="profile_image">profile_image</string>
    <string name="my_reservation">Le mie prenotazioni</string>
    <string name="activate_owner_mode">Attiva la modalità proprietario</string>
    <string name="language">Lingua</string>
    <string name="currency">Valuta</string>
    <string name="reminders">Notifiche</string>
    <string name="udm">Unità di misura</string>
    <string name="policy">Privacy Policy</string>

    <string-array name="years_array">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string-array name="lengths_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_field">Campo obbligatorio!</string>
    <string name="location">Posizione</string>
    <string name="my_boats">Le mie barche</string>
    <string name="e_mail">E-mail</string>
    <string name="salva_modifiche">Salva modifiche</string>
    <string name="add_boat">Aggiungi una barca</string>
    <string name="main_boat_info">Informazioni principali</string>
    <string name="builder">Costruttore</string>
    <string name="boatName">Nome della barca</string>
    <string name="lenght">Lunghezza (m)</string>
    <string name="other_info_boat">Ulteriori informazioni</string>
    <string name="my_bookings">Le mie prenotazioni</string>
    <string name="shipowner">Shipowner</string>


    <string-array name="cabins_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="bathroom_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="languages">
        <item>Italiano</item>
        <item>English</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="booking_validation">ATTENZIONE! Effettua il login per effettuare la tua prenotazione.</string>
    <string name="owner_booking_validation">ATTENZIONE! I proprietari non possono effettuare prenotazioni.</string>
    <string name="error_availability">ATTENZIONE! Prenotazione non disponibile\n\nSeleziona un nuovo periodo</string>
    <string name="send_message_validation">Solo gli utenti registrati possono inviare i messaggi ai proprietari.</string>
</resources>