<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.navigation.AccountFragment">

    <TextView
        android:id="@+id/txt_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/accedi"
        android:textColor="@color/navy_blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textEmailAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/indirizzo_e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <TextView
            android:visibility="gone"
            android:id="@+id/login_error_message"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|center_vertical"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/btn_shape1"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/pwdForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:text="@string/activity_link"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:text="@string/altrimenti"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_shape2"
            android:text="@string/registration"
            android:textColor="@color/navy_blue"
            app:cornerRadius="3dp"
            app:strokeColor="@color/navy_blue"
            app:strokeWidth="5dp" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:text="@string/sing_in_with"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/googleBtn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_shape2"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/google_login"
                android:src="@drawable/ic_google" />

            <!--<ImageButton
                android:id="@+id/facebookBtn"
                android:layout_width="69dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/facebook_login"
                android:src="@drawable/ic_facebook" />-->

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
