<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.auth.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/back_btn"
            android:contentDescription="@string/backBtn"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txt_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="28dp"
            android:text="@string/crea_account"
            android:textColor="@color/navy_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/textEmailAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/indirizzo_e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/textPasswordConfirm"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <TextView
            android:visibility="gone"
            android:id="@+id/signUp_error_message"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|center_vertical"/>

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_shape1"
            android:text="@string/registration"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>