<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".PasswordResetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="69dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/backBtn"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txt_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/password_reset"
            android:textColor="@color/navyblue"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/textEmailAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="@drawable/input_shape"
            android:ems="10"
            android:hint="@string/indirizzo_e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/sendResetPwdBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_shape1"
            android:text="@string/reset_pwd"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"/>

    </LinearLayout>

</FrameLayout>